[package]
name = "solobase-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase native binary — standalone server with tokio, SQLite, local storage"

[[bin]]
name = "solobase"
path = "src/main.rs"

[features]
default = ["sqlite", "storage-local"]
sqlite = ["solobase-core/sqlite"]
storage-local = ["solobase-core/storage-local"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
storage-s3 = ["solobase-core/storage-s3", "dep:wafer-block-s3"]
postgres = ["solobase-core/postgres", "dep:wafer-block-postgres"]
# Native ONNX-backed embedding + SQLite vector service. Propagates to the
# solobase library so `SolobaseBuilder::build()` will register the
# `wafer-run/vector` runtime block and the `suppers-ai/vector` feature
# block at startup.
native-embedding = ["solobase/native-embedding"]

[dependencies]
# Solobase library (platform-agnostic builder + flows + router)
solobase = { path = "../solobase" }
solobase-core = { path = "../solobase-core", default-features = false }

# WAFER runtime
wafer-run = { workspace = true, features = ["full"] }
wafer-core = { workspace = true }

# Native service implementation crates
wafer-block-sqlite = { workspace = true }
wafer-block-local-storage = { workspace = true }
wafer-block-config = { workspace = true }
wafer-block-crypto = { workspace = true }
wafer-block-network = { workspace = true }
wafer-block-logger = { workspace = true }
wafer-block-http-listener = { workspace = true }

# Optional backends
wafer-block-s3 = { workspace = true, optional = true }
wafer-block-postgres = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Config loading
dotenvy = { workspace = true }
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
sha2 = { workspace = true }
hmac = "0.12"
getrandom = "0.2"

# Time
chrono = { workspace = true }

# Utils
uuid = { workspace = true }

[lints]
workspace = true
