[package]
name = "solobase-plans"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Solobase plan definitions — single source of truth for all plan limits"

[lib]
name = "solobase_plans"
path = "src/lib.rs"

# Zero dependencies — this crate must compile for any target (native + wasm32)
