[package]
name = "solobase-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase native binary — standalone server with tokio, SQLite, local storage"

[[bin]]
name = "solobase"
path = "src/main.rs"

[features]
default = ["sqlite", "storage-local"]
sqlite = ["solobase-core/sqlite"]
storage-local = ["solobase-core/storage-local"]
otel = ["solobase-native/otel"]
storage-s3 = ["solobase-core/storage-s3", "solobase-native/s3"]
postgres = ["solobase-core/postgres", "solobase-native/postgres"]
# Native ONNX-backed embedding + SQLite vector service. Propagates to the
# solobase library so `SolobaseBuilder::build()` will register the
# `wafer-run/vector` runtime block and the `suppers-ai/vector` feature
# block at startup.
native-embedding = ["solobase-core/native-embedding"]

[dependencies]
# Solobase shared core (platform-agnostic builder + flows + router +
# feature blocks). Absorbed today's solobase (lib) crate.
solobase-core = { path = "../solobase-core", default-features = false }
solobase-native = { path = "../solobase-native" }

# WAFER runtime
wafer-run = { workspace = true, features = ["full"] }
wafer-core = { workspace = true }

# Native config service
wafer-block-config = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Observability
tracing = { workspace = true }

# Config loading
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Random / UUIDs (used in variable seeding)
getrandom = "0.2"
uuid = { workspace = true }

[lints]
workspace = true
