[package]
name = "solobase-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase compiled to WASM for running in the browser via Service Worker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Browser framework (platform services + SW plumbing)
solobase-browser = { path = "../solobase-browser" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Request", "Response", "ResponseInit",
    "Headers", "ReadableStream",
    "Url",
    "console",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WAFER runtime (no tokio, no wasmi, no reqwest)
wafer-run = { workspace = true }
wafer-core = { workspace = true }
wafer-block = { workspace = true }

# Solobase shared core (builder + flows + router + feature blocks).
# Absorbed today's solobase (lib) crate. `default-features = false`
# strips the native block set; the explicit `features` list pulls back
# in the wasm32-clean feature blocks so `register_all_static_blocks`
# actually registers them. Without this list every `suppers-ai/<name>`
# route returns "block not found" — linkme `register_static_block!`
# doesn't emit on wasm32, so the manual register helper is the only
# registration site, and every entry in it is
# `#[cfg(feature = "block-X")]`-gated. Keep in sync with
# `solobase-cloudflare/Cargo.toml`.
#
# `block-llm` / `block-vector` are excluded for now — the LlmBlock
# module is gated on `feature = "llm"`, which pulls in tokio/reqwest
# and is wasm32-incompatible. Closes via the LlmService trait refactor.
solobase-core = { path = "../solobase-core", default-features = false, features = [
    "block-files",
    "block-legalpages",
    "block-messages",
    "block-products",
    "block-userportal",
] }

# Config service (needed for EnvConfigService::new() and ConfigService::set())
wafer-block-config = { workspace = true }

# Async traits
async-trait = "0.1"

# Futures utilities (BoxStream + stream helpers for the LlmService impl)
futures = "0.3"

# CancellationToken — used by the LlmService trait signatures
tokio-util = { version = "0.7", default-features = false }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--all-features"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# uuid v4 needs a JS RNG source on wasm32
uuid = { version = "1", features = ["v4", "js"] }
