[package]
name = "solobase-worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Solobase User Worker — per-project block execution via Workers for Platforms"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WAFER runtime
wafer-run = { path = "../../../wafer-run/crates/wafer-run", default-features = false }
wafer-block = { path = "../../../wafer-run/crates/wafer-block" }

# Solobase blocks
solobase = { path = "../solobase", default-features = false }

# Solobase shared core (routing, crypto, features, pipeline)
solobase-core = { path = "../solobase-core", default-features = false }

# WAFER core blocks (shared DatabaseService/StorageService traits + handlers)
wafer-core = { path = "../../../wafer-run/crates/wafer-core", default-features = false }

# WAFER web block (static file serving from storage)
wafer-block-web = { path = "../../../wafer-run/crates/wafer-block-web" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Crypto
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12"
sha2 = "0.10"

# Async
async-trait = "0.1"

# Cloudflare Worker
worker = { version = "0.7.5", features = ["d1"] }
wasm-bindgen = "0.2"
