[package]
name = "solobase"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase — self-hosted backend platform powered by the WAFER runtime"

[lib]
name = "solobase"
path = "src/lib.rs"

[features]
default = ["llm"]
# Enable WASM block loading via the wasmi interpreter for auto-discovery.
wasm = ["wafer-run/wasm"]
# LLM feature block + native `ProviderLlmService` wiring. The Phase A
# service uses `tokio::spawn` with reqwest futures that are not Send on
# wasm32 — gate the whole thing so browser builds compile clean.
# Forwarded to solobase-core so the block module is excluded at the
# source.
llm = ["solobase-core/llm"]
# Native ONNX-backed embedding + SQLite vector service. Pulls in
# wafer-block-fastembed (ONNX Runtime) and enables the `vectors` feature
# of wafer-block-sqlite (sqlite-vec). Required to register the
# `suppers-ai/vector` feature block, which declares
# `requires=["wafer-run/vector"]` — without this feature neither the
# runtime nor the feature block is registered.
native-embedding = [
    "solobase-core/native-embedding",
    "dep:wafer-block-fastembed",
    "dep:wafer-block-sqlite",
    "dep:rusqlite",
]

[dependencies]
# WAFER runtime (minimal — types + clients only, no tokio/wasmi/reqwest)
wafer-run = { workspace = true }
wafer-core = { workspace = true }

# Middleware blocks (always registered by the builder)
wafer-block-auth-validator = { workspace = true }
wafer-block-cors = { workspace = true }
wafer-block-iam-guard = { workspace = true }
wafer-block-inspector = { workspace = true }
wafer-block-readonly-guard = { workspace = true }
wafer-block-router = { workspace = true }
wafer-block-security-headers = { workspace = true }
wafer-block-web = { workspace = true }

# Service block config (needed by builder for ConfigService trait)
wafer-block-config = { workspace = true }
wafer-block-crypto = { workspace = true }

# Native ONNX embeddings + SQLite vector service (optional — gated behind
# `native-embedding`). Both are required together: the vector service
# needs a sqlite-vec-enabled connection, and the embedding service is the
# only way to fulfil the `wafer-run/vector` block's EmbeddingService slot.
wafer-block-fastembed = { workspace = true, optional = true }
wafer-block-sqlite = { workspace = true, optional = true, features = ["vectors"] }
rusqlite = { workspace = true, optional = true }

# Solobase shared core (routing, crypto, features, pipeline, backend blocks)
solobase-core = { path = "../solobase-core", default-features = false }

# Async
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }

# Crypto
sha2 = { workspace = true }
hmac = "0.12"
getrandom = "0.2"

# Time
chrono = { workspace = true }

# Utils
uuid = { workspace = true }

[lints]
workspace = true
