[package]
name = "solobase"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solobase native binary — standalone server with tokio, SQLite, local storage"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "solobase"
path = "src/main.rs"

[features]
# Defaults pull every solobase-core feature block that was unconditionally
# compiled before the Phase 0b feature split (block-fastembed stays opt-in
# via `native-embedding`, matching its pre-split behaviour). `solobase-core`
# is depended on with `default-features = false`, so each `block-*` feature
# we want must be passed through explicitly below.
default = [
    "sqlite",
    "storage-local",
    "llm",
    "block-files",
    "block-messages",
    "block-vector",
    "block-llm",
    "block-legalpages",
    "block-userportal",
    "block-products",
]
sqlite = ["solobase-core/sqlite"]
storage-local = ["solobase-core/storage-local"]
otel = ["solobase-native/otel"]
storage-s3 = ["solobase-core/storage-s3", "solobase-native/s3"]
postgres = ["solobase-core/postgres", "solobase-native/postgres"]
# Provider-backed LLM block (suppers-ai/llm). Native default — enables
# the chat surface at /b/llm/.
llm = ["solobase-core/llm"]
# Native ONNX-backed embedding + SQLite vector service. Propagates to the
# solobase library so `SolobaseBuilder::build()` will register the
# `wafer-run/vector` runtime block and the `suppers-ai/vector` feature
# block at startup. Pulls block-fastembed + block-vector via solobase-core's
# own `native-embedding` -> block-fastembed/block-vector chain.
native-embedding = ["solobase-core/native-embedding"]
# Per-block passthroughs. `solobase-core` declares the actual `#[cfg]`s;
# these features forward the toggle so the native binary picks up matching
# block-* features when its own `[features].default` enables them.
block-files = ["solobase-core/block-files"]
block-messages = ["solobase-core/block-messages"]
block-vector = ["solobase-core/block-vector"]
block-llm = ["solobase-core/block-llm"]
block-legalpages = ["solobase-core/block-legalpages"]
block-userportal = ["solobase-core/block-userportal"]
block-products = ["solobase-core/block-products"]
block-fastembed = ["solobase-core/block-fastembed"]

[dependencies]
# Solobase shared core (platform-agnostic builder + flows + router +
# feature blocks). Absorbed today's solobase (lib) crate.
solobase-core = { path = "../solobase-core", default-features = false }
solobase-native = { path = "../solobase-native" }
# Browser-shell asset writer + bundle/template runner used by the
# sealed × web and embed × web flows. Native std::fs tooling — lives in its
# own crate so the native binary doesn't compile the wasm-bindgen `solobase-browser`.
solobase-bundle = { path = "../solobase-bundle" }

# WAFER runtime
wafer-run = { workspace = true, features = ["full"] }
wafer-core = { workspace = true }
# `wafer_async_trait` macro for the native `BootHooks` impl (the macro's
# expansion references the `async-trait` crate directly).
wafer-block = { workspace = true }
async-trait = { workspace = true }

# Native config service

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Observability
tracing = { workspace = true }

# Config loading
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Random / UUIDs (used in variable seeding)
getrandom = "0.2"
uuid = { workspace = true }

# Absorbed from solobase-cli (legacy_* CLI modules under src/cli/).
# Task 7 of the unified-CLI plan replaces these with the new verb-based
# CLI; until then they stay as a regression baseline (not currently
# wired into the binary).
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
