[package]
name = "minimal-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Smoke test: smallest possible solobase-browser consumer"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solobase-browser = { path = "../../crates/solobase-browser" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "Response"] }
wafer-run = { workspace = true }
